--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-native": "0.57.4",
     "react-native-splash-screen": "^3.0.6",
     "react-native-vector-icons": "^6.0.2",
-    "react-navigation": "^2.18.2"
+    "react-navigation": "^2.18.2",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
